--- a/src/index.njk
+++ b/src/index.njk
@@ -7,19 +7,12 @@ layout: base
 <div class="markdown">
     <h2>What's this?</h2>
     <p>
-        A community of sites around a common topic, also known as a <a href="https://en.wikipedia.org/wiki/Webring">webring</a>. 
-        Each member includes a badge on their site that links to the previous and next sites in the ring. 
-        Kids in the 90s used to love it!
+      A Web Ring is a collection of websites of a common topic, created back before the rise and monopoly of Google. Each member includes a badge on their site that links to the previous and next sites in the ring. The point of this site is to have a starting point for the ring. Report any broken links to logansryche@gmail.com
     </p>
 
     <h2>How to join</h2>
     <p>
-        To join the webring, <a href="{{ meta.repo }}/compare">open a pull request</a> 
-        and supply the name and URL of your site. If you publish a RSS feed, you can provide that as well.
-    </p>
-    <p>
-        If you don't have a Github account, you can also use this form to sign up. 
-        The webring admins will then look at your site and handle your request.
+        To join the webring, fill out this form and one of our admins will look the site over, and add it to the ring in the order it was received.
     </p>
 
     {% include 'signupform.njk' %}
