--- a/src/includes/snippet.njk
+++ b/src/includes/snippet.njk
@@ -1,9 +1,9 @@
-<table border="0">
+<table border="1">
 <tr>
 <td><a href="{{ meta.url }}/prev" target="_top"><small>Last site</small></a></td>
 <td></td>
 <td align="center"><a href="https://furring.netlify.com"><img src="https://furring.netlify.com/assets/images/frlogo2.gif" alt="[FurRing - official site!]" border="0" WIDTH="134" HEIGHT="100"></a><br>
-<font size="1">This FurRing site is owned by <a href="mailto:(INSERT EMAIL ADDRESS HERE)">(INSERT YOUR NAME HERE).</a><br>
+<font size="1">This FurRing site is owned by <a href="mailto:(INSERT EMAIL ADDRESS HERE)">(INSERT YOUR NAME HERE).</a>
 <td></td>
 <td><a href="{{ meta.url }}/next" target="_top"><font size="2">Next Site</font></a></td>
 </tr>
