--- a/src/includes/snippet.njk
+++ b/src/includes/snippet.njk
@@ -1,3 +1,4 @@
+<center>
 <table border="1">
 <tr>
 <td><a href="{{ meta.url }}/prev" target="_top"><small>Last site</small></a></td>
@@ -7,3 +8,4 @@
 <td align="center" colspan="3"><font size="1">This FurRing site is owned by <a href="mailto:(INSERT EMAIL ADDRESS HERE)">(INSERT YOUR NAME HERE).</a></td>
 </tr>
 </table>
+</center>
