--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,11 @@ layout: base
     <p>
       A Web Ring is a collection of websites of a common topic, created back before the rise and monopoly of Google. Each member includes a badge on their site that links to the previous and next sites in the ring. The point of this site is to have a starting point for the ring. Report any broken links to logansryche@gmail.com
     </p>
-
+    
+    <h2>The Origional FurRing Site</h2>
+    <p>The origional site was online from 1996 to 1999, and can be viewed <a href="http://web.archive.org/web/19990503143315/http://wolf.tierranet.com:80/furring.html" target="new">here</a> thanks to the Wayback Machine.
+    </p>
+    
     <h2>How to join</h2>
     <p>
         To join the webring, fill out this form and one of our admins will look the site over, and add it to the ring in the order it was received.
