--- a/src/includes/snippet.njk
+++ b/src/includes/snippet.njk
@@ -1,9 +1,9 @@
 <center>
 <table border="0">
 <tr>
-<td><a href="{{ meta.url }}/prev" target="_top"><small>Last site</small></a></td>
+<td><a href="https://thefurring.com//prev" target="_top"><small>Last site</small></a></td>
 <td align="center"><a href="https://thefurring.com/"><img src="https://thefurring.com//assets/images/frlogo2.gif" alt="[FurRing - official site!]" border="0" WIDTH="134" HEIGHT="100"></a></td>
-<td><a href="{{ meta.url }}/next" target="_top"><font size="2">Next Site</font></a></td>
+<td><a href="https://thefurring.com//next" target="_top"><font size="2">Next Site</font></a></td>
 </tr><tr>
 <td align="center" colspan="3"><font size="1">This FurRing site is owned by <a href="mailto:(INSERT EMAIL ADDRESS HERE)">(INSERT YOUR NAME HERE).</a></td>
 </tr>
