--- a/src/index.njk
+++ b/src/index.njk
@@ -32,7 +32,7 @@ layout: base
     <h2>Want to host your own webring?</h2>
     <p>
         If you want to start your own webring, fork 
-        <a href="https://github.com/maxboeck/webring">this project</a> on Github 
+        <a href="https://github.com/maxboeck/webring">the original project started by maxboeck</a> on Github 
         and follow the instructions in the README.
     </p>
 
