--- a/src/index.njk
+++ b/src/index.njk
@@ -5,8 +5,8 @@ layout: base
 {% include 'webring.njk' %}
 
 <div class="markdown">
-    <h2>The Origional FurRing Site</h2>
-    <p>The origional site can be viewed <a href="http://web.archive.org/web/19990503143315/http://wolf.tierranet.com:80/furring.html" target="new">here</a> thanks to the Wayback Machine.
+    <h2>The Original FurRing Site</h2>
+    <p>The original site can be viewed <a href="http://web.archive.org/web/19990503143315/http://wolf.tierranet.com:80/furring.html" target="new">here</a> thanks to the Wayback Machine.
     </p>
     
     <h2>How to join</h2>
